# RaspberryPiScreen

./: .gitignore  .gitmodules  CMakeLists.txt
resources/scripts/: disableHotspot.sh  enableHotspot.sh  networkPortFix.sh  setup.sh
resources/shaders/: RadialColor.fs  RingGauge.fs  test.fs
src/: main.cpp
src/data/: ConnectionHandler.cpp  ConnectionHandler.h  DataThread.cpp  DataThread.h  EBrytecConfigCustom.h  GlobalInputs.cpp  GlobalInputs.h  GlobalOutputs.h  GlobalVariables.h  Gpio.cpp  Gpio.h  RaspberryPiScreenBoard.cpp  ScreenControl.cpp  ScreenControl.h  Server.cpp  Server.h  screenboarddefs.h  screenboardrev2defs.h  screeninternaldefs.h
src/data/communication/: Server.h
src/data/communication/can/: CanConnectionHandler.cpp  CanConnectionHandler.h  CanManager.cpp  CanManager.h  CanSocket.cpp  CanSocket.h
src/data/communication/http/: HttpConnectionHandler.cpp  HttpConnectionHandler.h  HttpServer.cpp  HttpServer.h  index.html
src/data/communication/wifi/: ConnectionHandler.cpp  ConnectionHandler.h  Server.cpp  Server.h
src/gui/: CameraController.cpp  CameraController.h  CenterWindow.cpp  CenterWindow.h  GaugeWindow.cpp  Utils.cpp  Utils.h
src/gui/Assets/: Asset.h  AssetManager.cpp  AssetManager.h
src/gui/components/: AfrGauge.cpp  AfrGauge.h  BarGauge.cpp  BarGauge.h  BoostGauge.cpp  BoostGauge.h  ClosedLoopGauge.cpp  ClosedLoopGauge.h  GearIndicator.cpp  GearIndicator.h  Indicator.cpp  Indicator.h  LabelButton.cpp  LabelButton.h  RemoteCamera.cpp  RemoteCamera.h  SmallGauge.cpp  SmallGauge.h  Speedometer.cpp  Speedometer.h  TachGauge.cpp  TachGauge.h  UiComponents.cpp  UiComponents.h
src/gui/input/: TouchInput.cpp  TouchInput.h
src/gui/panels/: Panel.h
src/gui/panels/GaugeWindow/: CenterMainPanel.cpp  CenterMainPanel.h  EgtPanel.cpp  EgtPanel.h  FuelLevelPanel.cpp  FuelLevelPanel.h  IndicatorsPanel.cpp  IndicatorsPanel.h  LeftMainPanel.cpp  LeftMainPanel.h  RightMainPanel.cpp  RightMainPanel.h  RightMapPanel.cpp  RightMapPanel.h
src/gui/windows/: CenterWindow.cpp  CenterWindow.h  GaugeWindow.cpp  GaugeWindow.h
src/utils/: OpenGlStencil.cpp  OpenGlStencil.h
